J'ai ajouté trois blocs

--- a/coucou.html
+++ b/coucou.html
@@ -10,8 +10,14 @@
     <div class="moi">
         Salut Je suis Marie-Emmanuelle AZOH
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="box">
+        J'aime les animaux
+    </div>
+    <div class="box">
+        J'aime le taekwondo et la natation 
+    </div>
+    <div class="box">
+        J'aime le developpement Web
+    </div>
 </body>
 </html>
